# bkt_webapp

./: .gitignore  README.md
backend/: .env  .env.example  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
backend/app/: api_urls.py  settings.py
backend/apps/accounts/commands/: seed_dev.py
backend/apps/budgeting/: apps.py
backend/apps/core/: admin.py  api.py  api_dashboard.py  models.py  serializers.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/finance/: admin.py
backend/apps/profits/: api.py  apps.py  serializers.py
docker/: docker-compose.dev.yml
frontend/: package-lock.json  package.json
frontend/.next/: trace
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: _not-found_client-reference-manifest.js  not-found.js  not-found_client-reference-manifest.js  page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js  lucide-react.js  next.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: 030cf5fef0bc53a2.webpack.hot-update.json  8ffdf5d9d1f4f6f8.webpack.hot-update.json  (+7 more)
frontend/app/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/domain/: BudgetMonitor.tsx  DashboardKPIs.tsx  TransactionForm.tsx
frontend/components/ui/: primitives.tsx
frontend/migrations/: 001_initial_schema.sql
frontend/src/lib/: api.ts  auth.ts  auth_api.ts
frontend/types/: database.ts
(+18 files in other folders)
